--- a/src/app/view-cafe/view-cafe.component.html
+++ b/src/app/view-cafe/view-cafe.component.html
@@ -5,11 +5,11 @@
       <div class="row">
         <div class="col-md-3"></div>
         <div class="col-md-6" >
-          <form (ngSubmit)="searchCafe()" #searchCafe=ngForm>
+          <form (ngSubmit)="searchCafe()" #searchForm=ngForm>
             <div class="input-group">
               <input type="text" class="form-control" [(ngModel)]="searchText" #text=ngModel name="search_text" required>
               <div class="input-group-append">
-                <button class="btn btn-success" type="submit" [disabled]="!searchCafe.valid">Search</button>
+                <button class="btn btn-success" type="submit" [disabled]="!searchForm.valid">Search</button>
               </div>
             </div>
             <br>
