--- a/src/app/admin-header/admin-header.component.html
+++ b/src/app/admin-header/admin-header.component.html
@@ -1,1 +1,22 @@
-<p>admin-header works!</p>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#">Cap Cafe</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="['/view-cafe']" routerLinkActive="active">Cafe</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="['/solve-ticket']" routerLinkActive="active">Tickets</a>
+        </li>
+      </ul>
+      <ul class="nav navbar-nav ml-auto">
+        <li class="nav-item">
+          <button type="button" class="btn btn-tarnsparent btn-sm button-group">
+              <a class="nav-link" (click)="logout()" *ngIf="loginService.isUserloggedin || loginService.isAdminloggedin">Logout</a></button>
+      </li>
+      </ul>
+    </div>
+  </nav>
