--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,39 @@
-<p>header works!</p>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+
+    <nav class=" navbar navbar-dark bg-dark">
+        <a class="navbar-brand" href="#">Cap Cafe</a>
+    </nav>
+    <div class="container-fluid">
+        <a class="nav-link" [routerLink]="['/home']" routerLinkActive="active">
+        </a>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ml-auto" style="position: relative;">
+                             
+                <li class="nav-item">
+                    <button type="button" class="btn btn-tarnsparent btn-sm button-group">
+                        <a class="nav-link" [routerLink]="['/cust-home']" routerLinkActive="active">Search Food</a></button>
+                </li>
+
+                <li class="nav-item" *ngIf="!isLoggedIn">
+                    <button type="button" class="btn btn-tarnsparent btn-sm button-group">
+                        <a class="nav-link" [routerLink]="['/raise-ticket']" routerLinkActive="active" *ngIf="loginService.isUserloggedin || loginService.isAdminloggedin">Raise Ticket</a></button>
+                </li>
+
+                <li class="nav-item" *ngIf="!isLoggedIn">
+                    <button type="button" class="btn btn-tarnsparent btn-sm button-group">
+                        <a class="nav-link" [routerLink]="['/login']" routerLinkActive="active" *ngIf="!(loginService.isUserloggedin || loginService.isAdminloggedin)">Login</a></button>
+                </li>
+
+                <li class="nav-item">
+                    <button type="button" class="btn btn-tarnsparent btn-sm button-group">
+                        <a class="nav-link" [routerLink]="['/signup']" routerLinkActive="active" *ngIf="!(loginService.isUserloggedin || loginService.isAdminloggedin)">Register</a></button>
+                </li>
+
+                <li class="nav-item">
+                    <button type="button" class="btn btn-tarnsparent btn-sm button-group">
+                        <a class="nav-link" (click)="logout()" *ngIf="loginService.isUserloggedin || loginService.isAdminloggedin">Logout</a></button>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
