--- a/src/app/view-cafe/view-cafe.component.html
+++ b/src/app/view-cafe/view-cafe.component.html
@@ -68,7 +68,7 @@
     </tr>
     <tr *ngIf="!hideMenu && cafe.cafeId === currentId">
       <th colspan="8">
-        <table class="table table-hover table-sm table-dark" >
+        <table class="table table-sm table-dark" >
           <thead>
             <tr>
                 <th scope="col">Sl No.</th>
