--- a/src/app/view-menu/view-menu.component.html
+++ b/src/app/view-menu/view-menu.component.html
@@ -1,32 +1,103 @@
+<head>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
+        integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+</head>
+
 <br>
 <div class="row">
-    <div class="col-md-12">
-        <h3 style="text-align: center;">{{cafe.name}}</h3>
+    <div class="col-md-8">
+        <div class="card" style="width: 80%; left: 100px;">
+            <div class="card-body">
+                <div class="row">
+                    <div class="col-md-12">
+                        <h3 style="text-align: center;">{{cafe.name}}</h3>
+                        <br>
+                        <div class="row">
+                            <div class="col-xs-4" style="padding-left: 20px;">
+                                <p style="font-weight: bold;">Location: <span
+                                        style="font-weight: normal;">{{cafe.location}}</span></p>
+                                <p style="font-weight: bold;">Owner: <span style="font-weight: normal;">{{cafe.owner}}</span>
+                                </p>
+                            </div>
+                            <div class="col-xs-4" style="padding-left: 50px;">
+                                <p style="font-weight: bold;">Avg Rating: <span
+                                        style="font-weight: normal;">{{cafe.avgRating}}</span></p>
+                                <p style="font-weight: bold;">Avg Price: <span style="font-weight: normal;">Rs.
+                                        {{cafe.avgPrice}}</span></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <table class="table">
+                            <thead class="thead-dark">
+                                <tr>
+                                    <th>Sl No</th>
+                                    <th>Name</th>
+                                    <th>Type</th>
+                                    <th>Price</th>
+                                    <th style="text-align: center;">
+                                        <!-- <button type="button" class="btn btn-lg btn-danger"  -->
+                                        <button type="button" class="btn btn-primary btn-sm" >
+                                    Cart <span class="badge badge-light">{{order.length}}</span>
+                                  </button>
+                                    </th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr *ngFor="let dish of menu; let idx = index">
+                                    <th scope="row">{{idx+1}}</th>
+                                    <td>{{dish.name}}</td>
+                                    <td [ngStyle]="{'color':dish.itemType === 'VEG' ? 'green' : 'red' }">{{dish.itemType}}
+                                    </td>
+                                    <td>Rs. {{dish.price}}</td>
+                                    <td>
+                                        <div class="text-center">
+                                            <div class="btn-group" role="group" aria-label="Basic example">
+                                                <button type="button" class="btn btn-secondary btn-sm" aria-label="Left Align"
+                                                    id="add-item" (click)="addItem(dish)"><i class="fas fa-plus"></i></button>
+                                                <button type="button" class="btn btn-secondary btn-sm" aria-label="Left Align"
+                                                    id="remove-item" (click)="removeItem(dish)"><i
+                                                        class="fas fa-minus"></i></button>
+                                            </div>
+                                        </div>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+        
+            </div>
+        </div>
+        
+
     </div>
-</div>
-<div class="row">
-    <div class="col-md-12">
-        <table class="table">
-            <thead class="thead-dark">
-              <tr>
-                <th>Sl No</th>
-                <th>Name</th>
-                <th>Type</th>
-                <th>Price</th>
-                <th></th>
-              </tr>
-            </thead>
-            <tbody >
-                <tr *ngFor="let dish of menu; let idx = index">
-                    <th scope="row">{{idx+1}}</th>
-                    <td>{{dish.name}}</td>
-                    <td [ngStyle]="{'color':dish.itemType === 'VEG' ? 'green' : 'red' }">{{dish.itemType}}
-                    </td>
-                    <td>Rs. {{dish.price}}</td>
-                    <td><button type="button" class="btn btn-primary btn-sm">Add</button></td>
-                    
-                </tr>
-            </tbody>
-          </table>
+    <div class="col-md-4">
+        <div class="card" style="right: 60px;">
+            <div class="cord-body" >
+                <ul class="list-group" style="right: 60px;" >
+                    <li class="list-group-item" >
+                        <h6 style="text-align: left;"><i class="fa fa-shopping-cart" aria-hidden="true"></i> CART </h6>
+                    </li>
+                </ul>
+                <ul class="list-group" style="right: 60px;">
+                    <li class="list-group-item" *ngFor="let dish of order">
+                        <pre><i class="fa fa-caret-right" aria-hidden="true"></i>    <i class="fa fa-circle" [ngStyle]="{'color':dish.itemType === 'VEG' ? 'green' : 'red' }" aria-hidden="true" ></i>        {{dish.name}}                   Rs. {{dish.price}}</pre>
+                    </li>
+                  </ul>
+            </div>
+            <ul class="list-group" style="right: 60px;" >
+                <li class="list-group-item" >
+                    <pre>Total:                                          Rs. {{amount}}</pre>
+                    <p style="text-align:end ;"><button type="button" class="btn btn-primary">Go to Payment</button></p>
+                </li>
+            </ul>
+           
+            
+        </div>
+        
     </div>
+    
 </div>
