--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -48,15 +48,16 @@
             
             
 
-             
-
+             <br>
+            <p> Gender: &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             <label class="radio-inline">
                 <input type="radio" name="gender" id="inlineCheckbox1" value="male" ngModel />Male
             </label>
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             <label class="radio-inline">
                 <input type="radio" name="gender" id="inlineCheckbox2" value="female" ngModel />Female
             </label>
-            <br />
+          </p>
             <br />
             <button class="btn btn-lg btn-primary btn-block" type="submit" [disabled]="!f.valid" >
                 SIGN UP</button>
