--- a/src/app/admin-header/admin-header.component.html
+++ b/src/app/admin-header/admin-header.component.html
@@ -6,7 +6,10 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" [routerLink]="['/view-cafe']" routerLinkActive="active">Cafe</a>
+          <a class="nav-link" [routerLink]="['/add-cafe']" routerLinkActive="active">Add Cafe</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="['/view-cafe']" routerLinkActive="active">View Cafe</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" [routerLink]="['/solve-ticket']" routerLinkActive="active">Tickets</a>
