--- a/src/app/cust-home/cust-home.component.html
+++ b/src/app/cust-home/cust-home.component.html
@@ -50,7 +50,7 @@
               <div class="col-sm-3">
                   <div class="row">
                       <div class="col-sm-12">
-                        <p style="font-family: 'Courier New', Courier, monospace; font-size: 15px; text-align: end;">RATING: {{cafe.avgRating}}</p>
+                        <p style="font-family: 'Courier New', Courier, monospace; font-size: 15px; text-align: end;"><span class="badge badge-info">{{cafe.avgRating}}</span></p>
                       </div>
                   </div>
                 </div>
@@ -69,7 +69,7 @@
             </div>
             <div class="col-sm-7">
                 
-                  <button type="button" class="btn btn-primary btn-sm" (click)="viewMenu(cafe)">Add Review</button>
+                  <button type="button" class="btn btn-primary btn-sm" (click)="viewReview(cafe)">Add Review</button>
                   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                   <button type="button" class="btn btn-primary btn-sm" (click)="viewMenu(cafe)">View Menu</button>
                
