--- a/src/app/raise-ticket/raise-ticket.component.html
+++ b/src/app/raise-ticket/raise-ticket.component.html
@@ -8,7 +8,7 @@
                 <tr>
                   <div class="form-group">
                     <label for="orderId" class="orderId"><h4>Employee Id: </h4></label>
-                    <input type="text" formControlName="employeeId"  placeholder="Enter Employee Id" class="form-control" [value]="employee.capgeminiId" readonly><br>
+                    <input type="text"  placeholder="Enter Employee Id" class="form-control" [value]="employee.capgeminiId" readonly><br>
       
   <br>
   
