--- a/src/app/solve-ticket/solve-ticket.component.html
+++ b/src/app/solve-ticket/solve-ticket.component.html
@@ -49,7 +49,7 @@
                           <div class="form-group">
                             <label for="query" class="query"><h4>Employee Query : </h4></label>
                            
-                            <input type="text"  class="form-control"  [value]="singleEmpQuery?.query" readonly><br>
+                            <input type="text"  class="form-control"  [value]="ticket.query" readonly><br>
                             <label for="solution" class="solution"><h4>Solution : </h4></label>
         
                             
