--- a/src/app/cust-home/cust-home.component.html
+++ b/src/app/cust-home/cust-home.component.html
@@ -33,7 +33,7 @@
 <br>
 <div class="row">
     <div class="col-sm-6" *ngFor="let cafe of cafeList| paginate: { itemsPerPage: 10, currentPage: p }">
-      <div class="card" style="height: 160px;">
+      <div class="card" style="height: 160px; background-color:rgba(0,0,255,0.1);">
         <div class="row no-gutters">
             <div class="col-md-4">
               <img src="../../assets/images/food.jpg" class="card-img" alt="..." style="height: 160px;">
