--- a/src/app/view-menu/view-menu.component.html
+++ b/src/app/view-menu/view-menu.component.html
@@ -3,7 +3,9 @@
         integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
 </head>
 
-<br>
+
+<div class="cotainer-fluid" style="background-image: url(../../assets/images/cart.jpeg); background-size: 100%;;background-repeat: no-repeat;background-size: cover; height: 605px;">
+    <br>
 <div class="row">
     <div class="col-md-8">
         <div class="card" style="width: 80%; left: 100px;">
@@ -29,6 +31,7 @@
                         </div>
                     </div>
                 </div>
+                <hr>
                 <div class="row">
                     <div class="col-md-6">
                         <div class="input-group mb-3">
@@ -124,4 +127,5 @@
 
     </div>
 
+</div>
 </div>
