--- a/src/app/transaction/transaction.component.html
+++ b/src/app/transaction/transaction.component.html
@@ -8,9 +8,7 @@
 
           <div class="col-md-9 register-right">
             <br>
-            <div class="card" id="myTabContent" style="width: 50%;">
-              <div class="card-body">
-
+            <div class="tab-content" id="myTabContent" >
                 <h4 class="register-heading" style="text-align: center;"> Payment</h4>
                 <div class="raw">
                   <div class="form-group">
@@ -66,9 +64,7 @@
                   </div>
                 </div>
 
-                <p style="text-align: end;"> </p><button class="btn btn-primary" (click)="paymentOrder()" type="submit">Pay</button>
-
-              </div>
+                <button class="btn btn-primary" (click)="paymentOrder()" type="submit">Pay</button>
             </div>
           </div>
 
