--- a/src/app/view-menu/view-menu.component.html
+++ b/src/app/view-menu/view-menu.component.html
@@ -22,7 +22,7 @@
                                         style="font-weight: normal;">{{cafe.owner}}</span>
                                 </p>
                             </div>
-                            <div class="col-xs-4" style="padding-left: 400px;">
+                            <div class="col-xs-4" style="padding-left: 200px;">
                                 <p style="font-weight: bold;">Avg Rating: <span
                                         style="font-weight: normal;">{{cafe.avgRating}}</span></p>
                                 <p style="font-weight: bold;">Avg Price: <span style="font-weight: normal;">Rs.
@@ -41,6 +41,12 @@
                             <input type="text" [(ngModel)]=dishName #dish=ngModel class="form-control form-control-sm" placeholder="Enter Dish.." aria-label=""
                                 aria-describedby="basic-addon1">
                         </div>
+                        <div class="col-xs-6">
+                            <button type="button" class="btn btn-primary btn-sm" (click)="sortDish()" >Price Sort</button>
+                        </div>
+                        
+                            
+                        
 
                     </div>
                 </div>
@@ -63,7 +69,7 @@
                             </thead>
                             <tbody>
                                 <tr
-                                    *ngFor="let dish of menu | paginate: { itemsPerPage: 2, currentPage: p }; let idx = index ">
+                                    *ngFor="let dish of menu | paginate: { itemsPerPage: 10, currentPage: p }; let idx = index ">
                                     <th scope="row">{{idx+1}}</th>
                                     <td>{{dish.name}}</td>
                                     <td [ngStyle]="{'color':dish.itemType === 'VEG' ? 'green' : 'red' }">
