--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,5 +1,5 @@
 <br>
-<div class="row">
+<div class="row" *ngIf="showAbout">
   <div class="col-md-4"></div>
   <div class="col-md-4">
     <div class="card" style="width: 100%;">
@@ -38,9 +38,83 @@
           </tbody>
         </table>
       </div>
+      <button type="button" class="btn btn-primary" (click)="showTicket()">Show Raised Tickets</button>
+      <br>
+      <button type="button" class="btn btn-primary" (click)="showOrder()">Show Past Order</button>
     </div>
   
   
   </div>
   <div class="col-md-4"></div>
 </div>
+
+<div class="row" *ngIf="showOrders">
+  <div class="col-md-2"></div>
+  <div class="col-md-8">
+    <h5>Past Orders</h5>
+    <button type="button" class="btn btn-info" (click)="back()">Back</button>
+    <table class="table table-hover">
+      <thead class="thead-dark">
+        <tr>
+          <th scope="col">Order Id</th>
+          <th scope="col">Total Amount</th>
+          <th scope="col">Item Name</th>
+          <th scope="col">TimeStamp</th>
+        </tr>
+      </thead>
+      <tbody >
+        <tr *ngFor="let order of orders| paginate: { itemsPerPage: 6, currentPage: p }">
+          <td>{{order.orderId}}</td>
+          <td>Rs. {{order.totalAmount}}</td>
+          <td>
+            <p *ngFor="let item of order.cart">{{item.name}}</p>
+          </td>
+          <td>{{order.timestamp}}</td>
+        </tr>
+        <tr>
+          <td colspan="4">
+            <p style="text-align: center; font-size: smaller;">
+                <pagination-controls (pageChange)="p = $event"></pagination-controls>
+            </p>
+        </td>
+      </tr>
+      </tbody>
+    </table>
+  </div>
+  <div class="col-md-2"></div>
+</div>
+
+<div class="row" *ngIf="showTickets">
+  <div class="col-md-2"></div>
+  <div class="col-md-8">
+    <h5>Past Tickets</h5>
+    <button type="button" class="btn btn-info" (click)="back()">Back</button>
+    <table class="table table-hover">
+      <thead class="thead-dark">
+        <tr>
+          <th scope="col">Ticket Id</th>
+          <th scope="col">Query</th>
+          <th scope="col">Response</th>
+          <th scope="col">Status</th>
+        </tr>
+      </thead>
+      <tbody >
+        <tr *ngFor="let ticket of tickets| paginate: { itemsPerPage: 10, currentPage: p }">
+          <td>{{ticket.ticketId}}</td>
+          <td>{{ticket.query}}</td>
+          <td>{{ticket.response}}</td>
+          <td>{{ticket.status}}</td>
+        </tr>
+        <tr>
+        <td colspan="4" *ngIf="showTickets">
+          <p style="text-align: center; font-size: smaller;">
+              <pagination-controls (pageChange)="p = $event"></pagination-controls>
+          </p>
+      </td>
+    </tr>
+      </tbody>
+    </table>
+  </div>
+  <div class="col-md-2"></div>
+</div>
+
