--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -14,6 +14,10 @@
                     <button type="button" class="btn btn-tarnsparent btn-sm button-group">
                         <a class="nav-link" [routerLink]="['/about']" routerLinkActive="active" *ngIf="loginService.isUserloggedin || loginService.isAdminloggedin">Profile</a></button>
                 </li>
+                <li class="nav-item">
+                    <button type="button" class="btn btn-tarnsparent btn-sm button-group">
+                        <a class="nav-link" [routerLink]="['/add-money']" routerLinkActive="active" *ngIf="loginService.isUserloggedin || loginService.isAdminloggedin">Add Money</a></button>
+                </li>
             </ul>
             <ul class="navbar-nav ml-auto" style="position: relative;">
                              
